cluster/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    discovery.solo.io/function_discovery: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: gloo-system
